--- a/app/src/main/res/layout/fragment_drives.xml
+++ b/app/src/main/res/layout/fragment_drives.xml
@@ -49,7 +49,7 @@
             tools:layout_editor_absoluteX="203dp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton2"
+            android:id="@+id/fabDrives"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
