--- a/app/src/main/res/layout/drivecard_ka.xml
+++ b/app/src/main/res/layout/drivecard_ka.xml
@@ -96,10 +96,12 @@
 
                 <ImageView
                     android:id="@+id/infoButton_p"
-                    android:layout_width="19dp"
-                    android:layout_height="22dp"
+                    android:tint="#808080"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     app:srcCompat="@drawable/card_info_icon" />
                 <View
                     android:id="@+id/guideDrives"
@@ -109,6 +111,26 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     />
+
+                <ImageView
+                    android:id="@+id/ivDownloadDrives"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    app:srcCompat="@drawable/ic_download" />
+
+                <ImageView
+                    android:id="@+id/ivAddDrives"
+                    android:tint="#808080"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    app:layout_constraintEnd_toStartOf="@+id/ivDownloadDrives"
+                    app:srcCompat="@drawable/positions_fab" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
