--- a/app/src/main/res/layout/vpp_active_profiles_card.xml
+++ b/app/src/main/res/layout/vpp_active_profiles_card.xml
@@ -99,6 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:tint="@android:color/darker_gray"
+                    android:background="?attr/selectableItemBackgroundBorderless"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/card_info_icon" />
