--- a/app/src/main/res/layout/positions_cardview.xml
+++ b/app/src/main/res/layout/positions_cardview.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/deactivateButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
                     app:srcCompat="@drawable/deactivate_icon" />
@@ -34,7 +34,7 @@
                     android:id="@+id/activateButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
                     app:srcCompat="@drawable/activate_icon" />
@@ -43,7 +43,7 @@
                     android:id="@+id/editButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toStartOf="@id/deactivateButton"
                     app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
@@ -57,60 +57,68 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/card_info_icon" />
 
-                <ImageView
-                    android:id="@+id/inHouseTeamIcon"
+                <LinearLayout
+                    android:id="@+id/more_actions"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    android:orientation="horizontal"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView9">
+
+                    <ImageView
+                        android:id="@+id/inHouseTeamIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/inhouse_team_icon" />
+
+                    <ImageView
+                        android:id="@+id/socialMediaIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        app:srcCompat="@drawable/social_media_icon" />
+
+                    <ImageView
+                        android:id="@+id/careerPageIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        app:srcCompat="@drawable/career_page_icon" />
+
+                    <ImageView
+                        android:id="@+id/referralIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        app:srcCompat="@drawable/referral_icon" />
+
+                    <ImageView
+                        android:id="@+id/internalJobPortalIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintStart_toEndOf="@+id/referralIcon"
+                        app:layout_constraintTop_toTopOf="@+id/referralIcon"
+                        app:srcCompat="@drawable/list_icon" />
+
+                    <ImageView
+                        android:id="@+id/externalConsultantIcon"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        app:srcCompat="@drawable/external_consultant_icon" />
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/more_actions_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/positions_fab"
+                    android:backgroundTint="#000000"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/textView9"
-                    app:srcCompat="@drawable/inhouse_team_icon" />
-
-                <ImageView
-                    android:id="@+id/socialMediaIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/inHouseTeamIcon"
-                    app:layout_constraintTop_toTopOf="@+id/inHouseTeamIcon"
-                    app:srcCompat="@drawable/social_media_icon" />
-
-                <ImageView
-                    android:id="@+id/careerPageIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/socialMediaIcon"
-                    app:layout_constraintTop_toTopOf="@+id/socialMediaIcon"
-                    app:srcCompat="@drawable/career_page_icon" />
-
-                <ImageView
-                    android:id="@+id/referralIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/careerPageIcon"
-                    app:layout_constraintTop_toTopOf="@+id/careerPageIcon"
-                    app:srcCompat="@drawable/referral_icon" />
-
-                <ImageView
-                    android:id="@+id/internalJobPortalIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/referralIcon"
-                    app:layout_constraintTop_toTopOf="@+id/referralIcon"
-                    app:srcCompat="@drawable/list_icon" />
-
-                <ImageView
-                    android:id="@+id/externalConsultantIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toEndOf="@+id/internalJobPortalIcon"
-                    app:layout_constraintTop_toTopOf="@+id/internalJobPortalIcon"
-                    app:srcCompat="@drawable/external_consultant_icon" />
-
+                    app:layout_constraintStart_toEndOf="@id/more_actions"/>
                 <TextView
                     android:id="@+id/textView6"
                     style="@style/cardYellowText"
