--- a/app/src/main/res/layout/positions_cardview.xml
+++ b/app/src/main/res/layout/positions_cardview.xml
@@ -26,27 +26,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
+                    android:tint="#808080"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:srcCompat="@drawable/deactivate_icon" />
 
                 <ImageView
                     android:id="@+id/activateButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
+                    android:tint="#808080"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:srcCompat="@drawable/activate_icon" />
 
                 <ImageView
                     android:id="@+id/editButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
+                    android:tint="#808080"
                     app:layout_constraintEnd_toStartOf="@id/deactivateButton"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewInitiator"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:srcCompat="@drawable/edit_icon" />
 
                 <ImageView
@@ -55,6 +56,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:tint="#808080"
                     app:srcCompat="@drawable/card_info_icon" />
 
                 <LinearLayout
@@ -115,10 +117,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/positions_fab"
-                    android:backgroundTint="#000000"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/textView9"
-                    app:layout_constraintStart_toEndOf="@id/more_actions"/>
+                    android:backgroundTint="#808080"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/editButton"/>
                 <TextView
                     android:id="@+id/textView6"
                     style="@style/cardYellowText"
