--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#C08A00</color>
     <color name="colorAccent">#F8BA11</color>
     <color name="tabIndicatorColor">#f06292</color>
+    <color name="colorPrimaryLight">#ffff54</color>
 </resources>
